--- a/pom.xml
+++ b/pom.xml
@@ -38,11 +38,16 @@
       <scope>provided</scope>
     </dependency>
 
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
       <version>6.2.11</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.20.0</version>
     </dependency>
 
     <dependency>
