--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 
 
   <dependencies>
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>5.1.0</version>
+    </dependency>
 
     <dependency>
       <groupId>org.hibernate.validator</groupId>
